Run apt-get in docker builds without using any cache. Split steps in individual RUN commands
Signed-off-by: Daniel Lehrner <daniel.lehrner@consensys.net>

--- a/ethereum/evmtool/src/main/docker/Dockerfile
+++ b/ethereum/evmtool/src/main/docker/Dockerfile
@@ -2,13 +2,25 @@
 FROM ubuntu:22.04
 ARG VERSION="dev"
 
-RUN apt-get update && \
- apt-get install --no-install-recommends -q --assume-yes ca-certificates-java=20190909* && \
- apt-get install --no-install-recommends -q --assume-yes openjdk-17-jre-headless=17* && \
- apt-get clean  && \
- rm -rf /var/lib/apt/lists/*  && \
- adduser --disabled-password --gecos "" --home /opt/besu besu && \
-    chown besu:besu /opt/besu
+# Clean apt cache
+RUN apt-get clean
+RUN rm -rf /var/cache/apt/archives/* /var/cache/apt/archives/partial/*
+RUN rm -rf /var/lib/apt/lists/*
+
+# Update and install dependencies without using any cache
+RUN apt-get update -o Acquire::BrokenProxy="true" \
+  -o Acquire::http::No-Cache="true" \
+  -o Acquire::http::Pipeline-Depth="0"
+RUN apt-get install -o Acquire::BrokenProxy="true" \
+  -o Acquire::http::No-Cache="true" \
+  -o Acquire::http::Pipeline-Depth="0" --no-install-recommends -q --assume-yes ca-certificates-java=20190909*
+RUN apt-get install -o Acquire::BrokenProxy="true" \
+  -o Acquire::http::No-Cache="true" \
+  -o Acquire::http::Pipeline-Depth="0" --no-install-recommends -q --assume-yes openjdk-17-jre-headless=17*
+
+# Creating a user for besu
+RUN adduser --disabled-password --gecos "" --home /opt/besu besu
+RUN chown besu:besu /opt/besu
 
 USER besu
 WORKDIR /opt/besu-evmtool
