old license header with year
Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/build.gradle
+++ b/build.gradle
@@ -209,7 +209,8 @@ allprojects {
       endWithNewline()
       // apply appropriate license header files.
       licenseHeaderFile("${rootDir}/gradle/spotless.java.older.license").named("older").onlyIfContentMatches("^/\\*\\r?\\n \\* Copyright ConsenSys AG\\.")
-      licenseHeaderFile("${rootDir}/gradle/spotless.java.current.license").named("current").onlyIfContentMatches("^(?!/\\*\\r?\\n \\* Copyright ConsenSys AG\\.)")
+      licenseHeaderFile("${rootDir}/gradle/spotless.java.older.year.license").named("older.year").onlyIfContentMatches("^/\\*\\r?\\n \\* Copyright \\d{4} ConsenSys AG\\.")
+      licenseHeaderFile("${rootDir}/gradle/spotless.java.current.license").named("current").onlyIfContentMatches("^(?!/\\*\\r?\\n \\*.*ConsenSys AG\\.)")
     }
     groovyGradle {
       target '*.gradle'
