--- a/ethereum/evmtool/src/main/docker/Dockerfile
+++ b/ethereum/evmtool/src/main/docker/Dockerfile
@@ -1,26 +1,19 @@
 
 FROM ubuntu:22.04
 ARG VERSION="dev"
+ENV NO_PROXY_CACHE="-o Acquire::BrokenProxy=true -o Acquire::http::No-Cache=true -o Acquire::http::Pipeline-Depth=0"
 
 # Clean apt cache
-RUN apt-get clean
-RUN rm -rf /var/cache/apt/archives/* /var/cache/apt/archives/partial/*
-RUN rm -rf /var/lib/apt/lists/*
-
-# Update and install dependencies without using any cache
-RUN apt-get update -o Acquire::BrokenProxy="true" \
-  -o Acquire::http::No-Cache="true" \
-  -o Acquire::http::Pipeline-Depth="0"
-RUN apt-get install -o Acquire::BrokenProxy="true" \
-  -o Acquire::http::No-Cache="true" \
-  -o Acquire::http::Pipeline-Depth="0" --no-install-recommends -q --assume-yes ca-certificates-java=20190909*
-RUN apt-get install -o Acquire::BrokenProxy="true" \
-  -o Acquire::http::No-Cache="true" \
-  -o Acquire::http::Pipeline-Depth="0" --no-install-recommends -q --assume-yes openjdk-17-jre-headless=17*
-
-# Creating a user for besu
-RUN adduser --disabled-password --gecos "" --home /opt/besu besu
-RUN chown besu:besu /opt/besu
+RUN apt-get clean  && \
+  rm -rf /var/cache/apt/archives/* /var/cache/apt/archives/partial/*  && \
+  rm -rf /var/lib/apt/lists/*  && \
+  # Update and install dependencies without using any cache
+  apt-get update $NO_PROXY_CACHE  && \
+  apt-get install $NO_PROXY_CACHE --no-install-recommends -q --assume-yes ca-certificates-java=20190909*  && \
+  apt-get install $NO_PROXY_CACHE --no-install-recommends -q --assume-yes openjdk-17-jre-headless=17*  && \
+  # Creating a user for besu
+  adduser --disabled-password --gecos "" --home /opt/besu besu  && \
+  chown besu:besu /opt/besu
 
 USER besu
 WORKDIR /opt/besu-evmtool
