Add shanghai version of Simple Storage contract
Signed-off-by: Matthew Whitehead <matthew1001@gmail.com>

--- a/acceptance-tests/tests/build.gradle
+++ b/acceptance-tests/tests/build.gradle
@@ -24,6 +24,7 @@ solidity {
   resolvePackages = false
   // TODO: remove the forced version, when DEV network is upgraded to support latest forks
   version '0.8.19'
+  evmVersion 'london'
 }
 
 dependencies {
@@ -79,6 +80,7 @@ dependencies {
   testImplementation 'org.web3j:besu'
   testImplementation 'org.web3j:core'
   testImplementation 'org.wiremock:wiremock'
+  testImplementation project(path: ':acceptance-tests:tests:shanghai')
 
   testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
 }
@@ -211,13 +213,13 @@ task acceptanceTestBftSoak(type: Test) {
 
   useJUnitPlatform {}
 
-  dependsOn(rootProject.installDist)
+  // dependsOn(rootProject.installDist)
   setSystemProperties(test.getSystemProperties())
   systemProperty 'acctests.runBesuAsProcess', 'true'
   // Set to any time > 60 minutes to run the soak test for longer
   // systemProperty 'acctests.soakTimeMins', '120'
   systemProperty 'java.security.properties', "${buildDir}/resources/test/acceptanceTesting.security"
-  mustRunAfter rootProject.subprojects*.test
+  // mustRunAfter rootProject.subprojects*.test
   description = 'Runs BFT soak test.'
   group = 'verification'
 
