Put commented gradle code back in. Fix the web3j example commands in .sol files
Signed-off-by: Matthew Whitehead <matthew1001@gmail.com>

--- a/acceptance-tests/tests/build.gradle
+++ b/acceptance-tests/tests/build.gradle
@@ -213,13 +213,13 @@ task acceptanceTestBftSoak(type: Test) {
 
   useJUnitPlatform {}
 
-  // dependsOn(rootProject.installDist)
+  dependsOn(rootProject.installDist)
   setSystemProperties(test.getSystemProperties())
   systemProperty 'acctests.runBesuAsProcess', 'true'
   // Set to any time > 60 minutes to run the soak test for longer
   // systemProperty 'acctests.soakTimeMins', '120'
   systemProperty 'java.security.properties', "${buildDir}/resources/test/acceptanceTesting.security"
-  // mustRunAfter rootProject.subprojects*.test
+  mustRunAfter rootProject.subprojects*.test
   description = 'Runs BFT soak test.'
   group = 'verification'
 
