--- a/acceptance-tests/tests/build.gradle
+++ b/acceptance-tests/tests/build.gradle
@@ -14,6 +14,13 @@
 plugins {
   id 'org.web3j' version '4.11.1'
   id 'org.web3j.solidity' version '0.4.0'
+  id 'maven-publish'
+}
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) { artifactId 'acceptance-tests-tests' }
+  }
 }
 
 web3j { generatedPackageName = 'org.hyperledger.besu.tests.web3j.generated' }
