Exclude from regular acceptance tests
Signed-off-by: Matthew Whitehead <matthew1001@gmail.com>

--- a/acceptance-tests/tests/build.gradle
+++ b/acceptance-tests/tests/build.gradle
@@ -162,6 +162,7 @@ task acceptanceTestMainnet(type: Test) {
 task acceptanceTestNotPrivacy(type: Test) {
   inputs.property "integration.date", LocalTime.now() // so it runs at every invocation
   exclude '**/privacy/**'
+  exclude '**/bftsoak/**'
 
   useJUnitPlatform {}
 
