Revert "build - grooyGradle to use default version"
This reverts commit 51a7a7ec339e43e37ad1d47bd4ee6791a594b530.

Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/build.gradle
+++ b/build.gradle
@@ -215,8 +215,7 @@ allprojects {
     // spotless check applied to build.gradle (groovy) files
     groovyGradle {
       target '*.gradle'
-      // Use the default version and Groovy-Eclipse custom configuration
-      greclipse().configFile(rootProject.file('gradle/spotless/greclipse.properties'))
+      greclipse('4.21').configFile(rootProject.file('gradle/formatter.properties'))
       endWithNewline()
     }
     // Below this line are currently only license header tasks
@@ -770,6 +769,7 @@ task testDocker {
       executable shell
       args "-c", "./test.sh ${image}"
     }
+
   }
 }
 
