--- a/build.gradle
+++ b/build.gradle
@@ -215,7 +215,7 @@ allprojects {
     // spotless check applied to build.gradle (groovy) files
     groovyGradle {
       target '*.gradle'
-      greclipse('4.21').configFile(rootProject.file('gradle/formatter.properties'))
+      greclipse('4.31').configFile(rootProject.file('gradle/spotless/greclipse.properties'))
       endWithNewline()
     }
     // Below this line are currently only license header tasks
@@ -769,7 +769,6 @@ task testDocker {
       executable shell
       args "-c", "./test.sh ${image}"
     }
-
   }
 }
 
