build - change name of spotless target to Solidity
Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/build.gradle
+++ b/build.gradle
@@ -220,7 +220,7 @@ allprojects {
     }
     // Below this line are currently only license header tasks
     format 'bash', { target '**/*.sh' }
-    format 'sol', {
+    format 'Solidity', {
       target '**/*.sol'
       targetExclude '**/src/reference-test/**', '**/src/main/generated/**', '**/src/test/generated/**', '**/src/jmh/generated/**'
       trimTrailingWhitespace()
