build - update shell license text and spotless regexp
Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/build.gradle
+++ b/build.gradle
@@ -225,7 +225,7 @@ allprojects {
       trimTrailingWhitespace()
       endWithNewline()
 
-      licenseHeaderFile("${rootDir}/gradle/spotless/sh.license","^(?!#).+").skipLinesMatching("^#!.+?\$")
+      licenseHeaderFile("${rootDir}/gradle/spotless/sh.license","^(?!##).+").skipLinesMatching("^#!.+?\$")
     }
     format 'Solidity', {
       target '**/*.sol'
