build - Apply spotless license header checks to shell scripts  (#7048)
* build - apply license to shell scripts
* build - shell script license text
* fix - Add missing shebang line in evmtool benchmark shell scripts
* build - update shell license text and spotless regexp
* build - apply license header to shell scripts
* fix - Update shebang in splitList to use bash

---------

Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/build.gradle
+++ b/build.gradle
@@ -219,7 +219,14 @@ allprojects {
       endWithNewline()
     }
     // Below this line are currently only license header tasks
-    format 'bash', { target '**/*.sh' }
+    format 'ShellScripts', {
+      target '**/*.sh'
+      targetExclude '**/src/reference-test/**', '**/src/main/generated/**', '**/src/test/generated/**', '**/src/jmh/generated/**'
+      trimTrailingWhitespace()
+      endWithNewline()
+
+      licenseHeaderFile("${rootDir}/gradle/spotless/sh.license","^(?!##).+").skipLinesMatching("^#!.+?\$")
+    }
     format 'Solidity', {
       target '**/*.sol'
       targetExclude '**/src/reference-test/**', '**/src/main/generated/**', '**/src/test/generated/**', '**/src/jmh/generated/**'
