--- a/build.gradle
+++ b/build.gradle
@@ -1036,7 +1036,7 @@ distributions {
       from("build/reports/license/license-dependency.html") { into "." }
       from("./docs/GettingStartedBinaries.md") { into "." }
       from("./docs/DocsArchive0.8.0.html") { into "." }
-      from("build/besu.autocomplete.sh") { into "." }
+      from(autocomplete) { into "." }
     }
   }
 }
