build - Fix gradle build for Java 21
 -- Add compileOnly dependencies to allow gradle build to run against Java 21

Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/datatypes/build.gradle
+++ b/datatypes/build.gradle
@@ -37,6 +37,8 @@ dependencies {
   implementation 'io.tmio:tuweni-bytes'
   implementation 'io.tmio:tuweni-units'
 
+  compileOnly 'io.vertx:vertx-core'
+
   testImplementation 'org.assertj:assertj-core'
   testImplementation 'org.junit.jupiter:junit-jupiter'
 }
