--- a/plugin-api/build.gradle
+++ b/plugin-api/build.gradle
@@ -34,6 +34,7 @@ dependencies {
   api 'io.tmio:tuweni-units'
   implementation 'com.google.guava:guava'
   implementation project(':evm')
+  compileOnly 'io.vertx:vertx-core'
 }
 
 configurations { testArtifacts }
