--- a/ethereum/p2p/build.gradle
+++ b/ethereum/p2p/build.gradle
@@ -56,9 +56,12 @@ dependencies {
   implementation 'io.tmio:tuweni-io'
   implementation 'io.tmio:tuweni-rlp'
   implementation 'io.tmio:tuweni-units'
+  implementation 'org.apache.commons:commons-collections4'
   implementation 'org.jetbrains.kotlin:kotlin-stdlib'
   implementation 'org.owasp.encoder:encoder'
   implementation 'org.xerial.snappy:snappy-java'
+
+
 
   annotationProcessor "org.immutables:value"
   implementation "org.immutables:value-annotations"
