--- a/acceptance-tests/tests/shanghai/build.gradle
+++ b/acceptance-tests/tests/shanghai/build.gradle
@@ -2,14 +2,9 @@
 plugins {
   id 'org.web3j' version '4.11.1'
   id 'org.web3j.solidity' version '0.4.1'
-  id 'maven-publish'
 }
 
-publishing {
-  publications {
-    mavenJava(MavenPublication) { artifactId 'acceptance-tests-shanghai' }
-  }
-}
+jar { enabled = false }
 
 web3j { generatedPackageName = 'org.hyperledger.besu.tests.web3j.generated' }
 
