--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -40,7 +40,7 @@ jobs:
         run: ./gradlew clean spotlessCheck
 
       - name: Test & Build
-        run: ./gradlew build
+        run: ./gradlew build -x checkLicense
 
       - name: Test Report
         uses: dorny/test-reporter@v1
