[SKIP_CI] smoke testing verkle transition scaffold, without actual transition fixed tests
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/acceptance-tests/dsl/build.gradle
+++ b/acceptance-tests/dsl/build.gradle
@@ -25,6 +25,7 @@ dependencies {
   implementation project(':services:kvstore')
   implementation project(':testutil')
   implementation project(':util')
+  implementation project(':ethereum:trie')
 
   implementation 'com.google.guava:guava'
   implementation 'com.google.dagger:dagger'
