--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,7 +275,7 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
-          name: AcceptanceTests (Privacy)
+          name: AcceptanceTests (Non-Mainnet)
           no_output_timeout: 20m
           command: |
             ./gradlew --no-daemon --max-workers=1 acceptanceTestPermissioning
@@ -426,9 +426,6 @@ workflows:
             - assemble
             - acceptanceTests
       - acceptanceTestsPermissioning:
-          requires:
-            - assemble
-      - acceptanceTestsPrivacy:
           requires:
             - assemble
       - buildDocker:
