--- a/acceptance-tests/tests/shanghai/build.gradle
+++ b/acceptance-tests/tests/shanghai/build.gradle
@@ -4,9 +4,11 @@ plugins {
   id 'org.web3j.solidity' version '0.4.1'
 }
 
-jar { enabled = false }
+jar { enabled = true }
 
-web3j { generatedPackageName = 'org.hyperledger.besu.tests.web3j.generated' }
+web3j {
+  generatedPackageName = 'org.hyperledger.besu.tests.web3j.generated'
+}
 
 sourceSets.main.solidity.srcDirs = [
   "$projectDir/shanghaicontracts"
