feat: Use besu-dns-discovery
 -- Use besu-dns-discovery which is a fork of Tuweni dns discovery

Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/ethereum/p2p/build.gradle
+++ b/ethereum/p2p/build.gradle
@@ -50,7 +50,7 @@ dependencies {
   implementation('io.tmio:tuweni-devp2p') {
     exclude group:'ch.qos.logback', module:'logback-classic'
   }
-  implementation('io.tmio:tuweni-dns-discovery'){
+  implementation('io.consensys.protocols:besu-dns-discovery'){
     exclude group:'ch.qos.logback', module:'logback-classic'
   }
   implementation 'io.tmio:tuweni-io'
