--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -108,12 +108,15 @@ dependencyManagement {
       entry 'tuweni-concurrent'
       entry 'tuweni-crypto'
       entry 'tuweni-devp2p'
-      entry 'tuweni-dns-discovery'
       entry 'tuweni-io'
       entry 'tuweni-net'
       entry 'tuweni-rlp'
       entry 'tuweni-toml'
       entry 'tuweni-units'
+    }
+
+    dependencySet(group: 'io.consensys.protocols', version: '1.0.0') {
+      entry 'besu-dns-discovery'
     }
 
     dependencySet(group: 'io.vertx', version: '4.5.4') {
