--- a/.github/workflows/pre-review.yml
+++ b/.github/workflows/pre-review.yml
@@ -143,6 +143,8 @@ jobs:
           path: testList.txt
       - name: run unit tests
         run: cat testList.txt | xargs -P 1 ./gradlew -Dorg.gradle.parallel=true -Dorg.gradle.caching=true
+      - name: Remove downloaded test results
+        run: rm -rf tmp/junit-xml-reports-downloaded
       - name: Upload Unit Test Results
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
         with:
