--- a/.github/workflows/update-test-reports.yml
+++ b/.github/workflows/update-test-reports.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Get latest merge PR number
         id: latest_merged_pr_number
-        run: echo "PULL_REQUEST_NUMBER=$(gh pr list --repo hyperledger/besu --base main --state merged --limit 1 --json number | jq '.[].number')" >> "$GITHUB_OUTPUT"
+        run: echo "PULL_REQUEST_NUMBER=$(gh pr list --repo hyperledger/besu --base main --state merged --json "number,mergedAt" --search "sort:updated-desc" --jq 'max_by(.mergedAt)|.number')" >> "$GITHUB_OUTPUT"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Get unit test reports from latest merged PR
@@ -48,4 +48,4 @@ jobs:
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
         with:
           name: acceptance-test-results
-          path: 'acceptance-test-results/**/test-results/**/TEST-*.xml'
+          path: 'acceptance-test-results/**/TEST-*.xml'
