--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,8 +45,10 @@ jobs:
               echo "PLATFORM_PAIR=linux-amd64" >> $GITHUB_OUTPUT
               echo "ARCH=amd64" >> $GITHUB_OUTPUT
             else
+              sudo usermod -aG docker $USER
               sudo apt-get update
-              sudo apt-get -y install docker.io
+              sudo apt-get -y install docker.io acl
+              sudo setfacl --modify user:$USER:rw /var/run/docker.sock
               echo "PLATFORM_PAIR=linux-arm64" >> $GITHUB_OUTPUT
               echo "ARCH=arm64" >> $GITHUB_OUTPUT
             fi
