Refactor to control the peer connection in the permission level
Signed-off-by: Gabriel-Trintinalia <gabriel.trintinalia@consensys.net>

--- a/ethereum/p2p/build.gradle
+++ b/ethereum/p2p/build.gradle
@@ -60,6 +60,7 @@ dependencies {
   implementation 'org.jetbrains.kotlin:kotlin-stdlib'
   implementation 'org.owasp.encoder:encoder'
   implementation 'org.xerial.snappy:snappy-java'
+  implementation 'commons-net:commons-net:3.11.0'
 
   annotationProcessor "org.immutables:value"
   implementation "org.immutables:value-annotations"
