--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,9 @@
 org.gradle.welcome=never
+
+# Optional - set custom build version
+# version=24.5.6-acme
+# versionappendcommit=true
+
 # Set exports/opens flags required by Google Java Format and ErrorProne plugins. (JEP-396)
 org.gradle.jvmargs=-Xmx4g \
 --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
