acceptanceTestMainnet passes, but suspect I had to break BFT to get there
Signed-off-by: Justin Florentine <justin+github@florentine.us>

--- a/acceptance-tests/tests/build.gradle
+++ b/acceptance-tests/tests/build.gradle
@@ -125,6 +125,7 @@ task acceptanceTest(type: Test) {
 task acceptanceTestMainnet(type: Test) {
   inputs.property "integration.date", LocalTime.now() // so it runs at every invocation
   exclude '**/bft/**'
+  exclude '**/bftsoak/**'
   exclude '**/clique/**'
   exclude '**/permissioning/**'
   exclude '**/privacy/**'
